--- a/deployment.yaml
+++ b/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: demoapp
-        image: docker-registry.docker-registry.svc.cluster.local/demoapp:latest
+        image: docker-registry.docker-registry.svc.cluster.local:5000/demoapp:latest
         ports:
         - containerPort: 8080
